User was allowed to confirm his registration
